# ryft

./: build_ryft_xla_sys_local_cuda13.sh
.github/workflows/: build_ryft_xla_sys.yaml
crates/ryft-pjrt/src/: values.rs
crates/ryft-thor-smoketest/: Cargo.toml  README.md
crates/ryft-thor-smoketest/src/: main.rs
crates/ryft-xla-sys/: .bazelrc  BUILD.bazel  README.md  build.rs
crates/ryft-xla-sys/bazel/: archive.bzl
